// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET_INTERACTION_ERROR createInteraction Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_INTERACTION_ERROR",
  },
]
`;

exports[`GET_INTERACTION_ERROR getInteraction Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_INTERACTION_ERROR",
  },
]
`;

exports[`GET_INTERACTION_SUCCESS createInteraction Empty params 1`] = `Array []`;

exports[`GET_INTERACTIONS_ERROR getInteractions Receives error 1`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "GET_INTERACTIONS_ERROR",
  },
]
`;

exports[`GET_INTERACTIONS_SUCCESS getInteractions Receives interactions 2`] = `
Array [
  Object {
    "interactions": Array [
      Object {
        "created_at": "2021-02-25T17:31:33.826Z",
        "deleted_at": null,
        "description": "It will appear as an option for scenario authors to include in chat discussions within multi-participant scenarios. It receives participant chat messages.",
        "id": 1,
        "name": "ChatPrompt",
        "owner": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "superuser",
        },
        "updated_at": "2021-02-27T20:38:53.774Z",
      },
      Object {
        "created_at": "2021-02-25T17:31:33.826Z",
        "deleted_at": null,
        "description": "It will appear as an option for scenario authors to use in conditional content components within scenarios. It receives participant Audio Prompt Responses.",
        "id": 2,
        "name": "AudioPrompt",
        "owner": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "superuser",
        },
        "updated_at": "2021-02-27T20:38:53.774Z",
      },
      Object {
        "created_at": "2021-02-25T17:31:33.826Z",
        "deleted_at": null,
        "description": "It will appear as an option for scenario authors to use in conditional content components within scenarios. It receives participant Text Prompt Responses.",
        "id": 3,
        "name": "TextPrompt",
        "owner": Object {
          "email": "super@email.com",
          "id": 999,
          "is_anonymous": false,
          "is_super": true,
          "personalname": "Super User",
          "roles": Array [
            "participant",
            "super_admin",
            "facilitator",
            "researcher",
          ],
          "username": "superuser",
        },
        "updated_at": "2021-02-27T20:38:53.774Z",
      },
    ],
    "type": "GET_INTERACTIONS_SUCCESS",
  },
]
`;

exports[`GET_INTERACTIONS_SUCCESS getInteractions Receives undefined 3`] = `
Array [
  Object {
    "interactions": undefined,
    "type": "GET_INTERACTIONS_SUCCESS",
  },
]
`;

exports[`SET_INTERACTION_ERROR setInteraction Receives an error 2`] = `
Array [
  Object {
    "error": Object {
      "error": [Error: something unexpected happened on the server],
    },
    "type": "SET_INTERACTION_ERROR",
  },
]
`;

exports[`SET_INTERACTION_SUCCESS setInteraction Empty params 1`] = `Array []`;
